[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.pyright]
reportIncompatibleVariableOverride = false
reportIncompatibleMethodOverride = false
reportSelfClsParameterName = false
reportRedeclaration = false
reportArgumentType = false
exclude = ["**/__pycache__", ".stubs", ".utils", ".github"]
stubPath = ".stubs"
